--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p class="lead"> I am engineering student studying in DGI-GN.</p>
         <hr class="my-4">
         <p>Skills:NOT APPLICABLE RIGHT NOW.</p>
-        <a class="btn btn-primary btn-lg" href="httpa://www.github.com/arpitp549899" role="button">Github</a>
+        <a class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" href="https://www.github.com/arpitp5498" role="button">Github</a>
     </div>
     <br>
     <hr>
@@ -54,7 +54,7 @@
         <div class="card-body">
             <h5 class="card-title">Arpit Pandey</h5>
             <p class="card-text">PortfolioWebApp</p>
-            <a href="www.linkedin.com/in/arpit-pandey-368498387" class="btn btn-primary">Linkedin</a>
+            <a class="btn btn-primary btn-lg" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/arpit-pandey-368498387" role="button">Linkedin</a>
         </div>
     </div>
     <br>
